# MonsterWar

./: .gitignore  CMakeLists.txt  MonsterWar-Emscripten.js  MonsterWar-Emscripten.wasm  README-ZN.md  README.md  imgui.ini  index.html
assets/: config.json
assets/data/: default_session_data.json  enemy_data.json  player_data.json  skill_data.json  ui_config.json
assets/maps/: level1.tmj
cmake/: Dependencies.cmake
src/: main.cpp
src/engine/audio/: audio_player.cpp  audio_player.h
src/engine/component/: animation_component.h  render_component.h  sprite_component.h
src/engine/core/: context.cpp  context.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/loader/: basic_entity_builder.cpp  basic_entity_builder.h  level_loader.cpp  level_loader.h
src/engine/render/: camera.cpp  camera.h  image.h  renderer.cpp  renderer.h  sprite.h  text_renderer.cpp  text_renderer.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp
src/engine/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/system/: animation_system.cpp  animation_system.h  audio_system.cpp  audio_system.h  movement_system.cpp  render_system.cpp  ysort_system.cpp  ysort_system.h
src/engine/ui/: ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_interactive.cpp  ui_interactive.h  ui_label.cpp  ui_label.h  ui_panel.cpp  ui_panel.h
src/engine/ui/state/: ui_hover_state.cpp  ui_normal_state.cpp  ui_pressed_state.cpp
src/engine/utils/: events.h  math.h
src/game/component/: class_name_component.h  place_occupied_component.h  stats_component.h  target_component.h  unit_prep_component.h
src/game/data/: entity_blueprint.h  game_stats.h  level_config.cpp  level_config.h  level_data.h  session_data.cpp  session_data.h  ui_config.cpp  ui_config.h
src/game/defs/: constants.h  events.h  tags.h
src/game/factory/: blueprint_manager.cpp  blueprint_manager.h  entity_factory.cpp  entity_factory.h
src/game/loader/: entity_builder_mw.cpp  entity_builder_mw.h
src/game/scene/: end_scene.cpp  end_scene.h  game_scene.cpp  game_scene.h  level_clear_scene.cpp  level_clear_scene.h  title_scene.cpp  title_scene.h
src/game/spawner/: enemy_spawner.cpp  enemy_spawner.h
src/game/system/: animation_event_system.cpp  animation_event_system.h  animation_state_system.cpp  animation_state_system.h  attack_starter_system.cpp  attack_starter_system.h  block_system.cpp  combat_resolve_system.cpp  combat_resolve_system.h  debug_ui_system.cpp  debug_ui_system.h  effect_system.cpp  effect_system.h  followpath_system.cpp  followpath_system.h  fwd.h  game_rule_system.cpp  game_rule_system.h  health_bar_system.cpp  health_bar_system.h  orientation_system.cpp  orientation_system.h  place_unit_system.cpp  place_unit_system.h  projectile_system.cpp  projectile_system.h  remove_dead_system.cpp  render_range_system.cpp  selection_system.cpp  set_target_system.cpp  set_target_system.h  skill_system.cpp  skill_system.h  timer_system.cpp  timer_system.h
src/game/ui/: units_portrait_ui.cpp  units_portrait_ui.h
